[package]
name = "solana-jito-defi-rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio            = { version = "1.37", features = ["full"] }
anyhow           = "1"
serde_json       = "1"
base64           = "0.22.1"
jito-sdk-rust    = "0.2.0"
solana-client    = "2.2.7"
solana-sdk       = "2.2.2"
bincode          = "1.3.3"
dotenv           = "0.15.0"