[package]
name = "solana-jito-defi-rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio            = { version = "1.37", features = ["full"] }
anyhow           = "1"
serde_json       = "1"
base64           = "0.22.1"
jito-sdk-rust    = "0.3.2"
solana-client    = "3.0.5"
solana-sdk       = "3.0.0"
bincode          = "2.0.1"
dotenv           = "0.15.0"